--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -1,6 +1,6 @@
 <span>STATEMENT<span><br>
 Membership ID: <%= "#{@member.id}"%><br />
-Name: <%= "#{@member.first_name} #{@member.last_name} payments"%><br />
+Name: <%= "#{@member.first_name} #{@member.last_name}"%><br />
 Date: <%= @payments.last.date%><br />
 
   <table class="table table-striped table-bordered table-condensed table-hover">
