--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -6,6 +6,7 @@
 #main{
  margin-top: 40px;
  padding-top: 10px;
+ padding-bottom: 10px;
 }
 
 #pdf_header{
@@ -19,7 +20,7 @@
 }
 
 #splash{
-background: #76CE12;
+background: #08A554;
 }
 
 
