--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -6,6 +6,6 @@
   Milimani law courts,2nd floor,room no 244<br/>
   P.O Box 30041-00100 Nairobi,Kenya<br/>
   Telephone: 3588237<br/>
-  Email: kmjasec@yahoo.com, kmjasec@gmail.com
+  Email: <span>kmjasec@yahoo.com, kmjasec@gmail.com</span>
 </p>
 </section>
