--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -10,8 +10,8 @@
 }
 
 #pdf_header{
-   p > {
-    text-transform: uppercase;
+   p{
+    text-transform: !uppercase;
     font-size: 11px !important;
   }
 }
