--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -2,10 +2,10 @@
 <section id="pdf_header">
 <p>
   KENYA MAGISTRATES AND JUDGES ASSOCIATION<br/>
-  The Secretariat kenya Magistrates and Judges Association<br/>
-  Milimani law courts,2nd floor,room no 244<br/>
-  P.O Box 30041-00100 Nairobi,Kenya<br/>
-  Telephone: 3588237<br/>
-  Email: <span>kmjasec@yahoo.com, kmjasec@gmail.com</span>
+  THE SECRETARIAT KENYA MAGISTRATES AND JUDGES ASSOCIATION<br />
+  MILIMANI LAW COURTS, 2ND FLOOR ROOM NO 244</br/>
+  P.O BOX 30041-00100 NAIROBI, KENYA<br />
+  TELEPHONE: 3588237<br/>
+  EMAIL: <span>kmjasec@yahoo.com, kmjasec@gmail.com</span>
 </p>
 </section>
