--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,24 @@
        <li> <%= link_to "View Members", members_path%></li>
        <% if can? :create, Member%>
        <li><%= link_to "Add a new member", new_member_path%></li>
+       <li><%= link_to "view deleted members"%></li>
        <%end%>
       </ul>
       </li>
       <% if can? :invoice, Member%>
       <li><%= link_to "Invoice", invoice_path%></li>
       <%end%>
-      <li><%= link_to "Payments", payments_path%></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+           Payments <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><%= link_to "view Payments", payments_path%></li>
+          <% if can :create, Payment%>
+            <li><%= link_to "view deleted payments"%></li>
+          <%end%>
+        </ul>
+      </li>
       <li><%= link_to "Late payments", judges_with_balances_path%></li>
        </li>
       <li class="dropdown">
