--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
        <li> <%= link_to "View Members", members_path%></li>
        <% if can? :create, Member%>
        <li><%= link_to "Add a new member", new_member_path%></li>
-       <li><%= link_to "view deleted members"%></li>
+       <li><%= link_to "view deleted members", deleted_members_path%></li>
        <%end%>
       </ul>
       </li>
@@ -48,7 +48,7 @@
         <ul class="dropdown-menu">
           <li><%= link_to "view Payments", payments_path%></li>
           <% if can? :create, Payment%>
-            <li><%= link_to "view deleted payments"%></li>
+            <li><%= link_to "view deleted payments", deleted_payments_path%></li>
           <%end%>
         </ul>
       </li>
