--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -42,6 +42,7 @@ background: #08A554;
   z-index: -1;
 }
 .construction {
+  margin-left: 42%;
   animation: work .375s steps(1, start) infinite;
   font-size: 7px; /* pixel size */
   height: 1em;
