--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -30,6 +30,7 @@ background: #08A554;
 }
 
 .construction:after {
+  margin-left: 42%;
   background-color: #fdd400; /* colour of the sign */
   border-radius: 3em;
   content: '';
