--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -47,7 +47,8 @@ background: #08A554;
   font-size: 7px; /* pixel size */
   height: 1em;
   margin-bottom: 37em;
-  margin-left: 42%;
+  margin-top: 10%;
+  margin-left: 45%;
   position: relative;
   width: 1em;
   
