--- a/app/views/members/index.pdf.erb
+++ b/app/views/members/index.pdf.erb
@@ -9,7 +9,7 @@
     <th>Region</th>
   </tr>
 
-<% @members_pdf.each do |member| %>
+<% @members.each do |member| %>
   <tr>
     <td><%= member.id%></td>
     <td><%= member.first_name %></td>
