--- a/app/views/members/deleted_members.html.erb
+++ b/app/views/members/deleted_members.html.erb
@@ -1,1 +1,28 @@
-<div class="construction center"></div>
+<table class="table table-striped table-bordered table-condensed table-hover">
+  <tr>
+    <th><%= sort_link @search, :id, "Membership ID"%></th>
+    <th><%= sort_link @search, :first_name,"First Name"%></th>
+    <th><%= sort_link @search, :last_name, "Last Name" %></th>
+    <th><%= sort_link @search, :designation, "Designation"%></th>
+    <th><%= sort_link @search, :region, "Region"%></th>
+    <th><%= sort_link @search, :active, "Active"%></th>
+    <th><%= sort_link @search, :deleted_at, "Deleted AT"%></th>
+    <th></th>
+    <th></th>
+  </tr>
+
+<% @members.each do |member| %>
+  <tr>
+    <td><%= member.id%></td>
+    <td><%= member.first_name %></td>
+    <td><%= member.last_name %></td>
+    <td><%= member.designation %></td>
+    <td><%= member.region %></td>
+    <td><%= member.active %></td>
+    <td><%= member.deleted_at %></td>
+  </tr>
+<% end %>
+</table>
+
+
+<%= will_paginate @members%>
