--- a/app/views/members/deleted_members.html.erb
+++ b/app/views/members/deleted_members.html.erb
@@ -6,9 +6,7 @@
     <th><%= sort_link @search, :designation, "Designation"%></th>
     <th><%= sort_link @search, :region, "Region"%></th>
     <th><%= sort_link @search, :active, "Active"%></th>
-    <th><%= sort_link @search, :deleted_at, "Deleted AT"%></th>
-    <th></th>
-    <th></th>
+    <th><%= sort_link @search, :deleted_at, "Deleted at"%></th>
   </tr>
 
 <% @members.each do |member| %>
