--- a/app/views/payments/deleted_payments.html.erb
+++ b/app/views/payments/deleted_payments.html.erb
@@ -1,1 +1,35 @@
-<div class="construction center"></div>
+<section>
+  <table class="table table-striped table-bordered table-hover table-condensed">
+
+   <tr>
+     <th>Receipt Number</th>
+     <th>Date</th>
+     <th>First Name</th>
+     <th>Last Name</th>
+     <th>Designation</th>
+     <th>Region</th>
+     <th>Invoice</th>
+     <th>Amount</th>
+     <th>Balance</th>
+     <th>Deleted at</th>
+    </tr>
+
+  <% @payments.each do |payment| %>
+    <tr>
+      <td><%= payment.id%></td>
+      <td><%= payment.date%></td>
+      <td><%= payment.member.first_name%></td>
+      <td><%= payment.member.last_name%></td>
+      <td><%= payment.member.designation%></td>
+      <td><%= payment.region%></td>
+      <td><%= payment.invoice%></td>
+      <td><%= payment.amount %></td>
+      <td><%= payment.balance %></td>
+    </tr>
+  <% end %>
+  </table>
+
+  <br />
+
+<%= will_paginate @payments%>
+
