--- a/app/views/payments/deleted_payments.html.erb
+++ b/app/views/payments/deleted_payments.html.erb
@@ -3,15 +3,15 @@
 
    <tr>
      <th><%= sort_link @search, :receipt_number, "Receipt Number"%></th>
-     <th><%= sort_link @search, :date, "Date"</th>
-     <th><%= sort_link @search, :first_name, "First Name"</th>
-     <th><%= sort_link @search, :last_name, "Last Name"</th>
-     <th><%= sort_link @search, :desigantion, "Designation"</th>
-     <th><%= sort_link @search, :region, "Region"</th>
-     <th><%= sort_link @search, :invoice, "Invoice"</th>
-     <th><%= sort_link @search, :amount, "Amount"</th>
-     <th><%= sort_link @search, :balance, "Balance"</th>
-     <th><%= sort_link @search, :deleted, "Deleted at"</th>
+     <th><%= sort_link @search, :date, "Date"%></th>
+     <th><%= sort_link @search, :first_name, "First Name"%></th>
+     <th><%= sort_link @search, :last_name, "Last Name"%></th>
+     <th><%= sort_link @search, :desigantion, "Designation"%></th>
+     <th><%= sort_link @search, :region, "Region"%></th>
+     <th><%= sort_link @search, :invoice, "Invoice"%></th>
+     <th><%= sort_link @search, :amount, "Amount"%></th>
+     <th><%= sort_link @search, :balance, "Balance"%></th>
+     <th><%= sort_link @search, :deleted, "Deleted at"%></th>
     </tr>
 
   <% @payments.each do |payment| %>
