--- a/app/views/payments/deleted_payments.html.erb
+++ b/app/views/payments/deleted_payments.html.erb
@@ -21,7 +21,7 @@
       <td><%= payment.invoice%></td>
       <td><%= payment.amount %></td>
       <td><%= payment.balance %></td>
-      <td<%= payment.deleted_at %></td>
+      <td><%= payment.deleted_at %></td>
     </tr>
   <% end %>
   </table>
