--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,8 +2,5 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .center{
-  text-align: center;
-  img{
-    left-margin: 45% !important;
-  }
+  background: "logo.gif"
 }
