--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #splash{
-  padding: 0px;
-  background-image: image-url("logo.gif");
+  image{
+    display: none;
+  }
 }
