--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -33,6 +33,10 @@
       </tr>
     <%end%>
   <tr>
+  <tr>
+    <td>Being payment for</td>
+    <td>Subscription</td>
+  </tr>
 
 </table>
 <section class="pull-right signature">
