--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -1,4 +1,4 @@
-<span>STATEMENT<span><br>
+<span>SUBSCRIPTION STATEMENT<span><br>
 Membership ID: <%= "#{@member.id}"%><br />
 Name: <%= "#{@member.first_name} #{@member.last_name}"%><br />
 Date: <%= @payments.last.date%><br />
@@ -25,4 +25,10 @@ Date: <%= @payments.last.date%><br />
    </tr>
  <% end %>
 </table>
+<section class="pull-right signature">
+  <p>With Thanks<p><br />
+  <hr>
+  <p>For Kenya Magistrates and Judges Association</p>
+</section>
+
 
