--- a/app/views/members/judges_with_balances.html.erb
+++ b/app/views/members/judges_with_balances.html.erb
@@ -17,7 +17,7 @@
   <%= f.submit "Search", class: "btn btn-primary"%>
   <%= link_to "clear", judges_with_balances_path, class: "btn btn-warning"%>
 <%end%>
-
+<%= link_to image_tag("pdf.jpeg", size: "40x20", title: "all members"), params.merge(format: :pdf), class: "span1 pull-right"%>
 <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
     <th><%= sort_link @search, :id, "Membership ID"%></th>
