--- a/app/views/members/judges_with_balances.pdf.erb
+++ b/app/views/members/judges_with_balances.pdf.erb
@@ -2,7 +2,7 @@
 <%= wicked_pdf_stylesheet_link_tag "members"%>
   <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
-    <th>Membership ID></th>
+    <th>Membership ID</th>
     <th>First Name</th>
     <th>Last Name</th>
     <th>Designation</th>
@@ -11,7 +11,7 @@
     <th>Balance</th>
      </tr>
 
-<% @members.each do |member| %>
+<% @members_pdf.each do |member| %>
   <tr>
     <td><%= member.id%></td>
     <td><%= member.first_name %></td>
