--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -1,7 +1,7 @@
 <%= wicked_pdf_stylesheet_link_tag "members"%>
 <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
-    <td>Reciept NO.</td>
+    <td>Receipt NO.</td>
     <td><%= @payment.id%></td>
   </tr>
   <tr>
