--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -3,7 +3,7 @@ Membership ID: <%= "#{@member.id}"%><br />
 Name: <%= "#{@member.first_name} #{@member.last_name}"%><br />
 Date: <%= @payments.last.date%><br />
 
-  <table class="table table-striped table-bordered table-condensed table-hover">
+  <table class="table table-striped table-condensed">
     <tr>
      <th>Date</th>
      <th>Invoice</th>
