--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -29,7 +29,7 @@
 
 
     <%= f.label :active %>
-    <%= f.check_box :active, {checked: true} %><br/ >
+    <%= f.check_box :active %>
     <br />
 
     <%= f.submit "Add member", class: "btn btn-primary btn-large" %>
