--- a/app/views/payments/_stats.html.erb
+++ b/app/views/payments/_stats.html.erb
@@ -1,12 +1,14 @@
-<table class="table table-striped table-bordered table-hover table-condensed">
+<table class="table table-striped table-hover table-condensed">
   <tr>
     <th>Expected</th>
     <th>Amount</th>
-    <th>5 %</th>
+    <th>Balance</th>
+    <th>20 %</th>
   </tr>
   <tr>
     <td><%= @invoice%></td>
     <td><%= @amount%></td>
-    <td><%= @five_percent%></td>
+    <td><%= @balance%></td>
+    <td><%= @twenty_percent%></td>
   </tr>
 </table>
