--- a/app/views/members/judges_with_balances.html.erb
+++ b/app/views/members/judges_with_balances.html.erb
@@ -14,9 +14,13 @@
   <%= f.select :region_eq, Member::Regions, include_blank: "#{'-'*14}Region#{'-'*14}"%>
 
   <%= f.select :active_eq, ['true', 'false'], include_blank: "#{'-'*14}Active#{'-'*14}"%><br><br>
+  <h5>Search by Date interval</h5>
+  <%= f.date_select :payments_date_gteq, placeholder: "Start Date", :default => Time.now.beginning_of_year%><br /><br />
+  <%= f.date_select :payments_date_lteq, placeholder: "End Date"%>
   <%= f.submit "Search", class: "btn btn-primary"%>
   <%= link_to "clear", judges_with_balances_path, class: "btn btn-warning"%>
 <%end%>
+<%= @dat%>
 <%= link_to image_tag("pdf.jpeg", size: "40x20", title: "all members"), params.merge(format: :pdf), class: "span1 pull-right"%>
 <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
