change invoice dates

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -19,6 +19,9 @@
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name, required: true %>
 
+   <%= f.label :nationalid%><br />
+   <%= f.text_field :nationalid%>
+
 
     <%= f.label :designation %><br />
     <%= f.select :designation, Member::Designations %>
