--- a/app/views/members/_table.html.erb
+++ b/app/views/members/_table.html.erb
@@ -1,6 +1,7 @@
 <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
     <th><%= sort_link @search, :id, "Membership ID"%></th>
+    <th><%= sort_link @search, :nationalid, "National ID"%></td>
     <th><%= sort_link @search, :first_name,"First Name"%></th>
     <th><%= sort_link @search, :last_name, "Last Name" %></th>
     <th><%= sort_link @search, :designation, "Designation"%></th>
@@ -14,6 +15,7 @@
 <% @members.each do |member| %>
   <tr>
     <td><%= member.id%></td>
+    <td><%= member.nationalid%></td>
     <td><%= member.first_name %></td>
     <td><%= member.last_name %></td>
     <td><%= member.designation %></td>
