--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
         </ul>
       </li>
       <li><%= link_to "Late payments", judges_with_balances_path%></li>
+      <li><%= link_to "Bank Accounts", bank_accounts_path%></li>
        </li>
       <li class="dropdown">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
