--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -3,6 +3,7 @@
 <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
     <th>Membership ID</th>
+    <th>National ID</th>
     <th>First name</th>
     <th>Last name</th>
     <th>Designation</th>
@@ -13,6 +14,7 @@
 
   <tr>
     <td><%= @member.id%></td>
+    <td><%= @member.nationalid%></td>
     <td><%= @member.first_name %></td>
     <td><%= @member.last_name %></td>
     <td><%= @member.designation %></td>
