--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -18,7 +18,7 @@
      <th>Invoice</th>
      <th>Mode of payment</th>
      <th>Cheque no</th>
-     <th>Bank name</th>
+     <th>Bank Account</th>
      <th>Amount</th>
      <th>Balance</th>
      <th></th>
@@ -31,8 +31,9 @@
       <td><%= payment.date%></td>
       <td><%= number_to_currency(payment.invoice, :unit => "KES", :format => "%n %u")%></td>
       <td><%= payment.mode_of_payment %></td>
-      <td><%= payment.cheque_no %></td>
-      <td><%= payment.bank_name %></td>
+      <% if payment.bank_account.present?%>
+      <td><%= payment.bank_account.account_name %></td>
+      <% end%>
       <td><%= number_to_currency(payment.amount, :unit => "KES", :format => "%n %u")%></td>
       <td><%= number_to_currency(payment.balance, :unit => "KES", :format => "%n %u")%></td>
       <td><%= link_to 'Show',[@member, payment], class: "btn btn-mini btn-info"%></td>
