--- a/app/views/bank_accounts/edit.html.erb
+++ b/app/views/bank_accounts/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="row">
+ <div class="span10 offset3">
 <h1>Editing bank_account</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @bank_account %> |
-<%= link_to 'Back', bank_accounts_path %>
+<%= link_to 'Show', @bank_account, class="btn"%> |
+<%= link_to 'Back', bank_accounts_path, class: "btn"%>
+</div>
+</div>
