--- a/app/views/bank_accounts/new.html.erb
+++ b/app/views/bank_accounts/new.html.erb
@@ -1,5 +1,9 @@
+<div class="row">
+<div class="span10 offset3">
 <h1>New bank_account</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', bank_accounts_path %>
+<%= link_to 'Back', bank_accounts_path, class: "btn" %>
+</div>
+</div>
