--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -31,6 +31,8 @@
       <td><%= @payment.cheque_no %></td>
       <% if @payment.bank_account.present?%>
       <td><%= @payment.bank_name %></td>
+      <%else%>
+      <td></td>
       <%end%>
       <td><%= number_to_currency(@payment.amount, :unit => "KES", :format => "%n %u") %></td>
       <td><%= number_to_currency(@payment.balance, :unit => "KES", :format => "%n %u") %></td>
