--- a/app/views/members/judges_with_balances.html.erb
+++ b/app/views/members/judges_with_balances.html.erb
@@ -1,5 +1,5 @@
 <% if @members.any?%>
-  <span class="label label-success"><%= @members.count%> judges found</span>
+  <span class="label label-success"><%= pluralize(@members.count, "judge")%> found</span>
 <%else%>
   <span class= "label label-error">no judges with balances</span>
 <%end%>
@@ -20,7 +20,6 @@
   <%= f.submit "Search", class: "btn btn-primary"%>
   <%= link_to "clear", judges_with_balances_path, class: "btn btn-warning"%>
 <%end%>
-<%= @dat%>
 <%= link_to image_tag("pdf.jpeg", size: "40x20", title: "all members"), params.merge(format: :pdf), class: "span1 pull-right"%>
 <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
@@ -35,7 +34,24 @@
     <th></th>
     <th></th>
   </tr>
-
+<% if @with_search_terms%>
+       <% @members.each do |result|%>
+           <% member = result[0]%>
+           <% balance = result[1]%>
+          <tr>
+    <td><%= member.id%></td>
+    <td><%= member.first_name %></td>
+    <td><%= member.last_name %></td>
+    <td><%= member.designation %></td>
+    <td><%= member.region %></td>
+    <td><%= member.active %></td>
+    <td><%= balance %></td>
+    <td><%= link_to 'Show', member, class: "btn btn-mini btn-info" %></td>
+    <td><%= link_to 'Edit', edit_member_path(member), class: "btn btn-mini btn-warning"%></td>
+    <td><%= link_to 'Delete', member, method: :delete, data: { dismiss: 'Are you sure? NOTE: ALL THEIR PAYMENTS WILL BE DESTROYED' }, class: "btn btn-mini btn-danger"%></td>
+  </tr>
+       <%end%>
+<%else%>
 <% @members.each do |member| %>
   <tr>
     <td><%= member.id%></td>
@@ -50,6 +66,7 @@
     <td><%= link_to 'Delete', member, method: :delete, data: { dismiss: 'Are you sure? NOTE: ALL THEIR PAYMENTS WILL BE DESTROYED' }, class: "btn btn-mini btn-danger"%></td>
   </tr>
 <% end %>
+<%end%>
 </table>
 
-<%= will_paginate @members%>
+
