--- a/app/views/members/judges_with_balances.pdf.erb
+++ b/app/views/members/judges_with_balances.pdf.erb
@@ -9,8 +9,23 @@
     <th>Region</th>
     <th>Active</th>
     <th>Balance</th>
-     </tr>
+ </tr>
 
+<% if @with_search_terms%>
+       <% @members_pdf.each do |result|%>
+           <% member = result[0]%>
+           <% balance = result[1]%>
+        <tr>
+    <td><%= member.id%></td>
+    <td><%= member.first_name %></td>
+    <td><%= member.last_name %></td>
+    <td><%= member.designation %></td>
+    <td><%= member.region %></td>
+    <td><%= member.active %></td>
+    <td><%= balance %></td>
+  </tr>
+       <%end%>
+<%else%>
 <% @members_pdf.each do |member| %>
   <tr>
     <td><%= member.id%></td>
