--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       </ul>
       </li>
       <% if can? :invoice, Member%>
-      <li><%= link_to "Invoice", invoice_path%></li>
+      <li><%= link_to "Invoice", invoice_index_path%></li>
       <%end%>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
