--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -9,7 +9,7 @@
   <%if @member.ever_active?%>
   <%= link_to image_tag("pdf.jpeg", size: "40x20", title: "last 12"), member_payments_path(@member, format: :pdf), class: "span1 pull-right"%>
   <%end%>
-  </secion>
+  </section>
 
   <table class="table table-striped table-bordered table-hover table-condensed">
     <tr>
